# nyor-ai-my-openenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  data.py  environment.py  models.py
server/: app.py
