[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-b2b-openenv"
version = "1.0.0"
description = "Pharma B2B Quotation Environment for OpenEnv Hackathon"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0"
]
